[metadata]
name = curt
author = Benjamin Kiessling
author_email = mittagessen@l.unchti.me
summary = transformer-based trainable layout analysis system
home_page = http://kraken.re
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
keywords =
    htr
    layout analysis

[files]
packages = curt

[entry_points]
console_scripts =
    curt = curt.cli:cli

[flake8]
max_line_length = 160
exclude = tests/*

[options]
python_requires = >=3.7
install_requires =
    click>=7.0
    numpy
    Pillow>=6.2.2
    scipy
    scikit-image
    timm
    torchvision>=0.5.0
    torch>=1.7.1
    shapely
    pytorch-lightning
    rich
